--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: watershed
 Section: admin
 Priority: extra
 Maintainer: Scott James Remnant <scott@ubuntu.com>
-Build-Depends: cdbs, debhelper (>= 7), nettle-dev
+Build-Depends: debhelper (>= 8.9.0~), nettle-dev
 Standards-Version: 3.9.2
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/watershed/ubuntu
 
