Override dh_auto_build to pass Q= to make as to see actual build commands.

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,8 @@
 #!/usr/bin/make -f
 
+override_dh_auto_build:
+	dh_auto_build -- Q=
+
 override_dh_auto_install:
 	$(MAKE) install-bin DESTDIR=$(CURDIR)/debian/tmp
 
